--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,69 @@ input[type=number]::-webkit-outer-spin-button {
 		filter:none;
 		transition:1s;
 	}
+	@media only screen and (max-width: 600px) {
+   .py{
+   	margin-left: auto;
+   	margin-right: auto;
+   	margin-left: 0px;
+   	margin-right: 0px;
+   	text-align: center;
+   	filter:grayscale(100%);
+	}
+	.py:hover
+	{
+		cursor: pointer;
+		filter:none;
+		transition:1s;
+		
+	}
+	.livescript
+	{
+	margin-left: auto;
+   	margin-right: auto;
+   	margin-left: 0px;
+   	margin-right: 0px;
+   	text-align: center;
+		filter:grayscale(100%);
+	}
+	.livescript:hover
+	{
+		cursor: pointer;
+		filter:none;
+		transition:1s;
+	}
+	.php
+	{
+	margin-left: auto;
+   	margin-right: auto;
+   	margin-left: 0px;
+   	margin-right: 0px;
+   	text-align: center;
+		filter:grayscale(100%);
+	}
+	.php:hover
+	{
+		cursor: pointer;
+		filter:none;
+		transition:1s;
+	}
+	.mysql
+	{
+	margin-left: auto;
+   	margin-right: auto;
+   	margin-left: 0px;
+   	margin-right: 0px;
+   	text-align: center;
+		filter:grayscale(100%);
+	}
+	.mysql:hover
+	{
+		cursor: pointer;
+		filter:none;
+		transition:1s;
+	}
+    
+}
 
 /*.icon
 {
@@ -515,6 +578,151 @@ h1::after
 	background-color: black;
 	transition: 0.5s;
 	letter-spacing: .08em;
+}
+
+@media only screen and (max-width: 600px) {
+.fintech
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+
+
+}
+.fintech:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+
+}
+.healthcare
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+.healthcare:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
+.media1
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+.media1:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
+.retail
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+.retail:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
+.edu
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+.edu:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
+.enter
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+
+.enter:hover
+{
+
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
+.tra
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	position: relative;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+.tra:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
+.data
+{
+	margin-right: auto;
+	margin-left: auto;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
+	cursor:pointer;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif;
+}
+.data:hover
+{
+	color: white !important;
+	background-color: black;
+	transition: 0.5s;
+	letter-spacing: .08em;
+}
 }
 .mainimg
 {
